--- a/InscripciónEspacio.html
+++ b/InscripciónEspacio.html
@@ -75,7 +75,7 @@
          <label for="condicion3">Bienestar social </label>
         </li>
 
-         <textarea>Prepárese para la misión</textarea>
+         <textarea placeholder="Cualquier inquietud a considerar puede manifestarla en este espacio"></textarea>
         
          <button type="submit" id="submit">AD ASTRA</button>
        </ul>
